# wechat-article-scheduler

./: .env.example  .gitignore  AGENTS.md  README.md  agent_layer.yaml  agent_tools.yaml  package-lock.json  package.json  project.yaml  pyproject.toml  requirements.txt
.cursor/: mcp.json
.playwright-mcp/: page-2026-06-02T18-51-05-144Z.yml  page-2026-06-02T18-51-25-392Z.yml  page-2026-06-02T18-51-27-989Z.yml  page-2026-06-02T18-51-37-147Z.yml  page-2026-06-02T18-54-22-955Z.yml  page-2026-06-02T18-54-29-158Z.yml  page-2026-06-02T18-58-32-259Z.yml  page-2026-06-02T18-58-46-664Z.yml  page-2026-06-02T19-07-21-769Z.yml  page-2026-06-02T19-14-54-998Z.yml
assets/: README.md
config/: ops_maintenance.example.yaml  projects.example.yaml  rules.example.yaml  unified_outbox.example.yaml
docs/: AGENT_LAYER_AUDIT.md  AGENT_REPORTING.md  AGENT_ROADMAP.md  AGENT_RUNBOOK.md  AGENT_SAFETY.md  CODEX_HANDOFF.md  CODEX_USAGE.md  COST_CONTROL.md  PROMPTS.md  RESEARCH_NOTES.md  SEARCH_POLICY.md  TOOL_INVENTORY.md  TOOL_USAGE_POLICY.md  USER_VIEW_TESTING.md  adapter_registry.md  agent-browser-verification.md  api_research.md  architecture.md  article_detail_preview.md  bilibili_browser_assist.md  bilibili_manual_export.md  browser_assist_runbook.md  collection_schedule_rules.md  content_library_design.md  cover_asset_management.md  cover_assets_design.md  cover_crop_dual_preview.md  current_state_audit.md  cursor_browser_ui_runbook.md  cursor_tool_registry_check.md  database_design.md  douban_browser_assist.md  draft_only_account_execution_plan.md  draft_update.md  index.md  (+61 more)
(+505 files in other folders)
