[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-article-scheduler"
version = "0.1.0"
description = "Local-first WeChat article inbox scanner and publish scheduler (mock by default)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
wechat-scheduler = "wechat_article_scheduler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
