[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-article-scheduler"
version = "0.1.0"
description = "Local-first WeChat article inbox scanner and publish scheduler (mock by default)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
# 开发/诊断用，非运行时依赖。Playwright 用于本地 Web 工作台可用性诊断与截图。
# 安装：pip install -e ".[dev]" && playwright install chromium
dev = [
    "pytest>=8.0",
    "playwright>=1.40",
]

[project.scripts]
wechat-scheduler = "wechat_article_scheduler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
